# studyai

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: codecov.yml
backend-go/: Dockerfile  go.mod  go.sum
backend-go/pb/: rag_service.pb.go  rag_service_grpc.pb.go
backend-go/tests/: api_handler_test.go  api_test.go  auth_test.go  chat_repository_test.go  config_test.go  database_test.go  grpc_client_test.go  handler_test.go  logger_test.go  rag_client_test.go  redis_client_test.go  worker_test.go
backend-python/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend-python/app/: celery_app.py  config.py  containers.py  logger.py  main.py
backend-python/app/database/: __init__.py  connection.py
backend-python/app/database/migrations/: env.py
backend-python/app/database/migrations/versions/: 4e15eb2bb094_create_documents_table.py  5f26fc3cc195_add_content_type_to_documents.py  6g37gd4dd296_create_document_chunks_table.py
backend-python/app/database/models/: __init__.py  chunks.py  documents.py  users.py
backend-python/app/database/models/relations/: __init__.py  user_documents.py
backend-python/app/database/repositories/: __init__.py  chunks.py  documents.py
backend-python/app/database/service/: __init__.py  chunks.py  documents.py
backend-python/app/llm/: base.py  dummy_provider.py  factory.py
backend-python/app/llm/provider/: __init__.py  anthropic_provider.py  dummy_provider.py  gemini_provider.py  local_provider.py  openai_provider.py
backend-python/app/services/: __init__.py  document_parser.py  embedding_generator.py  embedding_service.py  rag_service.py  reranker_service.py  token_counter.py  vector_store.py
backend-python/app/services/grpc/: __init__.py  api_grpc_client.py  chat_service.py  knowledge_base_service.py
backend-python/app/tasks/: __init__.py  document_tasks.py
backend-python/pb/: rag_service_pb2.py  rag_service_pb2.pyi  rag_service_pb2_grpc.py  rag_service_pb2_grpc.pyi
backend-python/tests/: conftest.py
backend-python/tests/unit/: test_chat_service.py  test_containers.py  test_document_parser.py  test_embedding_generator.py  test_knowledge_base_service.py  test_llm_factory.py  test_llm_providers.py  test_logger.py  test_main.py  test_rag_service.py  test_reranker_service.py  test_token_counter.py  test_vector_store.py  test_vector_store_cache.py
proto/: rag_service.proto
(+56 files in other folders)
